# dopemux-mvp

./: .backup_location  .claude.json  .claude.json.template  .dockerignore  .dopetask-pin  .env.conport.example  .env.example  .env.production-ready  .env.template  .flake8  .gitignore  .gitmodules  .lychee.toml  .markdownlint.jsonc  .pre-commit-config.yaml  .repo_id  .taskx-pin  .tmux.conf  .zen-version.txt  ACTION-PLAN-MASTER.md  ADHD-DASHBOARD-SESSION-SUMMARY.md  AG-master_plan.md  AGENTS.md  ALL_DONE.md  AUDIT_RESULTS.json  CHANGELOG.md  CLAUDE_AUTOMATION_INSTRUCTIONS.md  CLAUDE_CODE_CCR_INTEGRATION.md  CLAUDE_CODE_HOOKS_README.md  CLAUDE_CODE_MODEL_DISPLAY.md  COMPLETE_PR_WORKFLOW.md  COMPLETION_CHECKLIST.md  CONPORT-KG-2025-PROJECT-SUMMARY.md  CONPORT_STATUS.md  DANGEROUS_MODE_GUIDE.md  DASHBOARD_DAY10_QUICK_REFERENCE.md  DASHBOARD_DAY10_SUMMARY.md  DASHBOARD_DAY9_SUMMARY.md  DASHBOARD_QUICK_REFERENCE.md  DAY1_COMPLETE_SUMMARY.md  (+266 more)
.Jules/: palette.md
.claude/: AGENT_ARCHITECTURE.md  CLAUDE.md.backup  COMMAND_CONSOLIDATION_EPICS.md  claude.md  (+20 more)
docker/mcp-servers/desktop-commander/: CONNECTION_GUIDE.md  DESKTOP_COMMANDER_VALIDATION.md  Dockerfile  README.md  README_HYBRID.md  integration_bridge_connector.py  pyproject.toml  server.py  start_with_uvx.sh  stdio_bridge.py  test_stdio_bridge.py
docker/mcp-servers/exa/: Dockerfile  exa_server.py  pyproject.toml  requirements.txt  start_with_uvx.sh  wrapper.py
services/dope-query/: adhd_query_adapter.py  auth_schema.sql  orchestrator.py  pyproject.toml  test_security_fixes.py
services/dope-query/auth/: database.py  jwt_utils.py  models.py  password_utils.py  service.py
services/dope-query/operations/: migrations.py  monitoring.py
services/dope-query/queries/: __init__.py  exploration.py  models.py  overview.py
services/dope-query/tests/: conftest.py  test_infrastructure.py  test_password_utils.py  utils.py
services/genetic-agent/genetic_agent/: pyproject.toml
services/genetic-agent/genetic_agent/core/: config.py
services/genetic-agent/genetic_agent/genetic/: adaptive_population.py  historical_learning.py  population.py
services/genetic-agent/genetic_agent/genetic_agent/: README.md
services/genetic-agent/genetic_agent/genetic_agent/docs/: genetic_agent_api.md
services/genetic-agent/genetic_agent/genetic_agent/genetic_agent/: requirements.txt
services/genetic-agent/genetic_agent/genetic_agent/shared/utils/: prompt_sanitizer.py
services/genetic-agent/genetic_agent/genetic_agent/tests/comparison/: comparison_runner.py
services/genetic-agent/genetic_agent/genetic_agent/tests/phase2/: test_circuit_breaker.py
services/genetic-agent/genetic_agent/shared/mcp/: zen_client.py
services/genetic_agent/: Dockerfile  Dockerfile.fixed  README-genetic.md  README.md  __init__.py  cli.py  dopecon_integration.py  main.py  pyproject.toml  requirements.txt  test_vanilla_agent.py
services/genetic_agent/core/: agent.py  config.py
services/genetic_agent/genetic/: genetic_agent.py  gp_operators.py
services/genetic_agent/genetic_agent/: main.py  requirements.txt
services/genetic_agent/genetic_agent/core/: __init__.py  config.py
services/genetic_agent/genetic_agent/genetic/: failure_analysis.py  genetic_agent.py  historical_learning.py
services/genetic_agent/genetic_agent/genetic_agent/genetic_agent/: cli.py
services/genetic_agent/genetic_agent/genetic_agent/genetic_agent/cli/: cli.py
services/genetic_agent/genetic_agent/genetic_agent/intelligent/: context_integrator.py
services/genetic_agent/genetic_agent/genetic_agent/reliability/: adaptive_circuit_breaker.py
services/genetic_agent/genetic_agent/genetic_agent/scripts/: run_comparison.py
services/genetic_agent/genetic_agent/genetic_agent/tests/comparison/: __init__.py  test_comparison.py
services/genetic_agent/genetic_agent/genetic_agent/tests/phase2/: test_context_integrator.py
services/genetic_agent/genetic_agent/shared/: eventbus.py
services/genetic_agent/genetic_agent/shared/mcp/: conport_client.py  serena_client.py  zen_client.py
services/genetic_agent/genetic_agent/shared/utils/: prompt_sanitizer.py
services/genetic_agent/genetic_agent/tests/: __init__.py
services/genetic_agent/genetic_agent/tests/unit/: test_base_agent.py
services/genetic_agent/genetic_agent/vanilla/: vanilla_agent.py
services/genetic_agent/shared/: eventbus.py
services/genetic_agent/shared/mcp/: base_client.py  conport_client.py  dope_context_client.py  gptr_client.py  memory_adapter.py  pal_client.py  serena_client.py  zen_client.py
services/genetic_agent/shared/utils/: async_helpers.py  prompt_sanitizer.py
services/genetic_agent/vanilla/: vanilla_agent.py
services/orchestrator/: CONFIG_SYSTEM_README.md  KNOWN_ISSUES.md  PHASE_2_COMPLETION_SUMMARY.md  README.md  RESPONSE_PARSER_README.md  demo_orchestrator.py  pyproject.toml  test_multi_ai_parallel.py  test_response_parser.py
services/orchestrator/claudedocs/: message-bus-decision-analysis.md  step2-validation-request.md
services/orchestrator/src/: __init__.py  agent_config_factory.py  agent_spawner.py  agent_spawner_pty.py  checkpoint_manager.py  command_parser.py  config_loader.py  conport_client.py  conport_http_client.py  context_protocol.py  conversation_manager.py  error_recovery.py  event_bus.py  health_monitor.py  main.py  message_bus.py  message_bus_v2.py  response_parser.py  router.py  session_manager.py  streaming_display.py  timeout_manager.py  tmux_manager.py  workspace_support.py  zen_client.py
services/orchestrator/src/layouts/: __init__.py  adaptive_layout.py
services/orchestrator/tests/: test_command_parser.py  test_tmux_manager.py  test_workspace_support.py
services/orchestrator/tmux/: __init__.py  layout_manager.py
services/orchestrator/tui/: README.md  USER_GUIDE.md  __init__.py  break_manager.py  command_history.py  command_router.py  command_router_enhanced.py  conport_tracker.py  energy_detector.py  main.py  main_with_orchestrator.py  parallel_orchestrator.py  session_manager.py  state_manager.py  test_conport_integration.py  test_day5_integration.py  test_enhanced_router.py
(+17208 files in other folders)
