[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genetic-agent"
version = "0.3.0"
description = "Enhanced Iterative Agent - Intelligent Code Repair with AI Assistance"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "rich>=13.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/your-org/genetic-agent"
Repository = "https://github.com/your-org/genetic-agent"
Issues = "https://github.com/your-org/genetic-agent/issues"

[project.scripts]
genetic-agent = "genetic_agent.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["genetic_agent*"]

[tool.setuptools.package-data]
"genetic_agent" = ["py.typed"]