[project]
name = "desktop-commander-mcp"
version = "2.0.0"
description = "Desktop Commander MCP Server - Cross-platform desktop automation for Claude Code"
authors = [
    {name = "Dopemux Team"}
]
readme = "CONNECTION_GUIDE.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
desktop-commander = "server:main"
desktop-commander-stdio = "stdio_bridge:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
