[project]
name = "exa-mcp"
version = "1.0.0"
description = "Exa MCP Server - Neural web search for Claude Code"
authors = [
    {name = "Dopemux Team"}
]
requires-python = ">=3.10"
dependencies = [
    "exa-py>=1.0.0",
    "mcp>=1.17.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
exa-mcp = "exa_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exa_server.py"]
only-include = ["exa_server.py"]
