[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genetic-agent"
version = "0.1.0"
description = "Dual-agent Genetic Coding Agent system with vanilla and genetic programming approaches"
authors = [{name = "Dopemux Team"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "structlog>=23.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    "deap>=1.4.0",
    "numpy>=1.24.0"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]

[tool.setuptools]
packages = ["genetic_agent"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88